fixed overflow text

--- a/css/services.css
+++ b/css/services.css
@@ -22,6 +22,7 @@ body {
 .flex {
   border-radius: 0 !important;
   width: 100vw;
+  height: 100%vh !important;
 }
 .flex h2 {
   font-size: 1rem;
@@ -34,9 +35,10 @@ body {
 
 .flex .column {
   columns: 2;
-  height: 100vh;
+  height: 50vh;
   margin-bottom: 1rem !important;
   z-index: 1;
+  overflow: scroll;
 }
 .container-fluid p {
   color: var(--background-color);
@@ -71,13 +73,12 @@ form {
   white-space: nowrap;
   font-size: 1.5rem;
 }
+
 .yellow {
   color: yellow !important;
 }
 /* End Contact */
-.z-index-2 {
-  z-index: 2;
-}
+
 @media screen and (min-width: 48em) {
   .heading-title {
     font-size: 3.5rem;
